ArC - Optimize UnremovableBeanBuildItem predicates
Instead of transforming all the submitted DotNames to toString(), we only
submit the ones we test against.